--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="output"></div>
 
 <script>
-const TMDB_API_KEY = 'YOUR_TMDB_API_KEY'; // Replace with your TMDb API Key
+const TMDB_API_KEY = '55b11132b5aef36e8376418dcce756f2'; // Replace with your TMDb API Key
 
 async function generatePost() {
     const id = document.getElementById('tmdbId').value.trim();
