--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ button {margin-top:15px; padding:10px 15px; border:none; border-radius:5px; curs
 #copy {background:#007bff; color:#fff; margin-left:10px;}
 #output {margin-top:20px; white-space: pre-wrap; background:#222; padding:15px; border-radius:10px;}
 .post img {max-width:100px; margin:5px;}
+.download-btn {margin-bottom:10px;}
 </style>
 </head>
 <body>
@@ -24,47 +25,43 @@ button {margin-top:15px; padding:10px 15px; border:none; border-radius:5px; curs
 <label>TMDb ID (Movie or Series)</label>
 <input type="text" id="tmdbId" placeholder="Enter TMDb ID">
 
-<label>Title</label>
-<input type="text" id="title">
+<!-- Auto-fill / Manual edit fields -->
+<label>Title</label><input type="text" id="title">
+<label>Description</label><textarea id="description" rows="3"></textarea>
+<label>IMDb Rating</label><input type="text" id="rating">
+<label>Release Year</label><input type="text" id="year">
+<label>Language</label><input type="text" id="language">
+<label>Quality</label><input type="text" id="quality">
+<label>File Size</label><input type="text" id="filesize">
+<label>Format</label><input type="text" id="format">
+<label>Starcast</label><input type="text" id="starcast">
+<label>Duration</label><input type="text" id="duration">
+<label>Season</label><input type="text" id="season">
+<label>Genres</label><input type="text" id="genres">
+<label>Screenshots URLs (comma separated)</label><textarea id="screenshots" rows="3"></textarea>
 
-<label>Description</label>
-<textarea id="description" rows="3"></textarea>
-
-<label>IMDb Rating</label>
-<input type="text" id="rating">
-
-<label>Release Year</label>
-<input type="text" id="year">
-
-<label>Language</label>
-<input type="text" id="language">
-
-<label>Quality</label>
-<input type="text" id="quality">
-
-<label>File Size</label>
-<input type="text" id="filesize">
-
-<label>Format</label>
-<input type="text" id="format">
-
-<label>Starcast</label>
-<input type="text" id="starcast">
-
-<label>Duration</label>
-<input type="text" id="duration">
-
-<label>Season</label>
-<input type="text" id="season">
-
-<label>Genres</label>
-<input type="text" id="genres">
-
-<label>Screenshots URLs (comma separated)</label>
-<textarea id="screenshots" rows="3"></textarea>
-
-<label>Download Links (480p,720p,1080p,4K,8K - comma separated)</label>
-<textarea id="downloads" rows="2"></textarea>
+<!-- Individual Download Buttons -->
+<h3>Download Buttons</h3>
+<div class="download-btn">
+  <label>Button 1 Label</label><input type="text" id="btn1Label" placeholder="480p">
+  <label>Button 1 URL</label><input type="text" id="btn1Url" placeholder="#">
+</div>
+<div class="download-btn">
+  <label>Button 2 Label</label><input type="text" id="btn2Label" placeholder="720p">
+  <label>Button 2 URL</label><input type="text" id="btn2Url" placeholder="#">
+</div>
+<div class="download-btn">
+  <label>Button 3 Label</label><input type="text" id="btn3Label" placeholder="1080p">
+  <label>Button 3 URL</label><input type="text" id="btn3Url" placeholder="#">
+</div>
+<div class="download-btn">
+  <label>Button 4 Label</label><input type="text" id="btn4Label" placeholder="4K">
+  <label>Button 4 URL</label><input type="text" id="btn4Url" placeholder="#">
+</div>
+<div class="download-btn">
+  <label>Button 5 Label</label><input type="text" id="btn5Label" placeholder="8K">
+  <label>Button 5 URL</label><input type="text" id="btn5Url" placeholder="#">
+</div>
 
 <button id="generate">Generate Post</button>
 <button id="copy">Copy HTML</button>
@@ -72,7 +69,7 @@ button {margin-top:15px; padding:10px 15px; border:none; border-radius:5px; curs
 <pre id="output"></pre>
 
 <script>
-const TMDB_API_KEY = '55b11132b5aef36e8376418dcce756f2'; // Replace with your TMDb API Key
+const TMDB_API_KEY = 'YOUR_TMDB_API_KEY'; // Replace with your TMDb API Key
 
 async function fetchTMDb(id) {
     let data, type;
@@ -90,12 +87,12 @@ async function fetchTMDb(id) {
     return {data, type};
 }
 
+// Auto-fill on TMDb ID change
 document.getElementById('tmdbId').addEventListener('change', async ()=>{
     const id = document.getElementById('tmdbId').value.trim();
     if(!id) return;
     const {data, type} = await fetchTMDb(id);
 
-    // Fill input fields automatically
     document.getElementById('title').value = data.title || data.name;
     document.getElementById('description').value = data.overview || '';
     document.getElementById('rating').value = data.vote_average || '';
@@ -106,12 +103,15 @@ document.getElementById('tmdbId').addEventListener('change', async ()=>{
     document.getElementById('season').value = type==='tv' ? (data.number_of_seasons + ' Seasons') : '';
     document.getElementById('genres').value = (data.genres || []).map(g => g.name).join(', ');
     document.getElementById('screenshots').value = (data.images.backdrops || []).slice(0,6).map(i=>`https://image.tmdb.org/t/p/w500${i.file_path}`).join(',');
-    document.getElementById('downloads').value = 'Link480p,Link720p,Link1080p,Link4K,Link8K';
-    document.getElementById('quality').value = 'Manual edit';
-    document.getElementById('filesize').value = 'Manual edit';
-    document.getElementById('format').value = 'Manual edit';
+    // Fill default button labels
+    document.getElementById('btn1Label').value = '480p';
+    document.getElementById('btn2Label').value = '720p';
+    document.getElementById('btn3Label').value = '1080p';
+    document.getElementById('btn4Label').value = '4K';
+    document.getElementById('btn5Label').value = '8K';
 });
 
+// Generate HTML
 document.getElementById('generate').addEventListener('click', ()=>{
     const title = document.getElementById('title').value;
     const desc = document.getElementById('description').value;
@@ -126,7 +126,14 @@ document.getElementById('generate').addEventListener('click', ()=>{
     const season = document.getElementById('season').value;
     const genres = document.getElementById('genres').value;
     const screenshots = document.getElementById('screenshots').value.split(',').map(s=>s.trim());
-    const downloads = document.getElementById('downloads').value.split(',').map(s=>s.trim());
+
+    const btns = [
+        {label: document.getElementById('btn1Label').value, url: document.getElementById('btn1Url').value},
+        {label: document.getElementById('btn2Label').value, url: document.getElementById('btn2Url').value},
+        {label: document.getElementById('btn3Label').value, url: document.getElementById('btn3Url').value},
+        {label: document.getElementById('btn4Label').value, url: document.getElementById('btn4Url').value},
+        {label: document.getElementById('btn5Label').value, url: document.getElementById('btn5Url').value}
+    ];
 
     const html = `
 <div class="post dkpost">
@@ -148,17 +155,14 @@ document.getElementById('generate').addEventListener('click', ()=>{
   <h3>Screenshots must see before downloading</h3>
   ${screenshots.map(s=>`<img src="${s}">`).join('')}
   <h3>Download this movie/series</h3>
-  <a href="${downloads[0]||'#'}" class="dbtn dbtn1"><i class="fa-solid fa-download"></i>⚡480p</a>
-  <a href="${downloads[1]||'#'}" class="dbtn dbtn2"><i class="fa-solid fa-download"></i>⚡720p</a>
-  <a href="${downloads[2]||'#'}" class="dbtn dbtn3"><i class="fa-solid fa-download"></i>⚡1080p</a>
-  <a href="${downloads[3]||'#'}" class="dbtn dbtn4"><i class="fa-solid fa-download"></i>⚡4K</a>
-  <a href="${downloads[4]||'#'}" class="dbtn dbtn5"><i class="fa-solid fa-download"></i>⚡8K</a>
+  ${btns.map((b,i)=>`<a href="${b.url||'#'}" class="dbtn dbtn${i+1}"><i class="fa-solid fa-download"></i>⚡${b.label}</a>`).join('')}
 </div>
     `;
 
     document.getElementById('output').textContent = html;
 });
 
+// Copy HTML
 document.getElementById('copy').addEventListener('click', ()=>{
     const output = document.getElementById('output');
     navigator.clipboard.writeText(output.textContent).then(()=>alert('Copied to clipboard!'));
