--- a/public/index.html
+++ b/public/index.html
@@ -1,159 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TMDB Post Generator</title>
-<link rel="stylesheet" href="https://tituhh.github.io/css/cdn/gen.css">
-<style>
-body{margin:0;font-family:'Poppins',sans-serif;background:#121212;color:#fff;}
-.container{max-width:900px;margin:0 auto;padding:20px;}
-label{display:block;margin-top:15px;color:cyan;font-weight:600;}
-input,textarea,select{width:100%;margin:5px 0;padding:8px;border-radius:8px;border:none;background:#222;color:#fff;}
-button{padding:10px 20px;margin-top:10px;border:none;border-radius:30px;font-weight:600;background:linear-gradient(45deg,#ff4b2b,#ff416c);color:#fff;cursor:pointer;}
-button:hover{opacity:0.9;}
-textarea#output{height:200px;background:#111;color:#fff;padding:15px;border-radius:10px;margin-top:20px;}
-.preview{margin-top:20px;padding:20px;background:#1a1a1a;border-radius:12px;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TMDB Post Generator</title>
+  <link rel="stylesheet" href="https://tituhh.github.io/css/cdn/gen.css">
+  <style>
+    body { background: #121212; color: #fff; font-family: 'Poppins', sans-serif; }
+    .container { max-width: 900px; margin: auto; padding: 20px; text-align: center; }
+    input, textarea { width: 100%; padding: 8px; margin: 6px 0; border-radius: 8px; border: none; background: #1e1e1e; color: #fff; }
+    button { background: cyan; border: none; padding: 10px 20px; border-radius: 6px; margin-top: 10px; cursor: pointer; font-weight: 600; }
+    #output { margin-top: 30px; text-align: left; background: #1a1a1a; padding: 20px; border-radius: 10px; }
+  </style>
 </head>
 <body>
+
 <div class="container">
   <h2>🎬 TMDB Post Generator</h2>
 
-  <label>TMDB ID:</label>
-  <input type="text" id="tmdbid" placeholder="Enter TMDB ID">
+  <input id="tmdbid" placeholder="Enter TMDB ID (e.g. 414906)" />
+  <button onclick="fetchData()">Fetch Data</button>
 
-  <label>Type:</label>
-  <select id="type">
-    <option value="movie">Movie</option>
-    <option value="tv">Series</option>
-  </select>
+  <input id="title-field" placeholder="Title" />
+  <input id="tagline-field" placeholder="Tagline" />
+  <input id="poster-field" placeholder="Poster URL" />
+  <input id="backdrop-field" placeholder="Backdrop URL" />
+  <input id="genres-field" placeholder="Genres (comma separated)" />
+  <input id="release-field" placeholder="Release Date" />
+  <input id="runtime-field" placeholder="Runtime (min)" />
+  <input id="director-field" placeholder="Director" />
+  <input id="writer-field" placeholder="Writer" />
+  <input id="cast-field" placeholder="Top Cast (comma separated)" />
+  <textarea id="overview-field" placeholder="Overview"></textarea>
+  <input id="screenshots-field" placeholder="Screenshots URLs (comma separated)" />
+  <input id="download-label-field" placeholder="Download Label" />
+  <input id="download-link-field" placeholder="Download Link" />
 
-  <button onclick="fetchTMDB()">Fetch Data</button>
-
-  <!-- Editable Fields -->
-  <label>Title:</label><input type="text" id="title-field">
-  <label>Tagline:</label><input type="text" id="tagline-field">
-  <label>Poster URL:</label><input type="text" id="poster-field">
-  <label>Genres (comma separated):</label><input type="text" id="genres-field">
-  <label>Release Date:</label><input type="text" id="release-field">
-  <label>Runtime:</label><input type="text" id="runtime-field">
-  <label>Director:</label><input type="text" id="director-field">
-  <label>Writer:</label><input type="text" id="writer-field">
-  <label>Top Cast (comma separated):</label><input type="text" id="cast-field">
-  <label>Overview:</label><textarea id="overview-field"></textarea>
-  <label>Screenshots (comma separated URLs):</label><input type="text" id="screenshots-field">
-  <label>Download Links (label|URL, comma separated):</label>
-  <input type="text" id="downloads-field" placeholder="1080p|https://example.com, 720p|https://example.com">
-
-  <button onclick="updatePreview()">Update Preview</button>
   <button onclick="generateHTML()">Generate HTML</button>
-  <button onclick="copyHTML()">Copy HTML</button>
-  <button onclick="sendPost()">Send Post to Blogger</button>
 
-  <h3>Preview</h3>
-  <div class="preview" id="preview-container"></div>
+  <div id="output"></div>
 
-  <textarea id="output" placeholder="Generated HTML will appear here"></textarea>
+  <button onclick="sendToBlogger()">Send to Blogger</button>
 </div>
 
 <script>
-const API_KEY = "55b11132b5aef36e8376418dcce756f2"; // Replace with your TMDB API key
+const TMDB_API_KEY = "55b11132b5aef36e8376418dcce756f2";
 
-async function fetchTMDB(){
+async function fetchData() {
   const id = document.getElementById("tmdbid").value;
-  const type = document.getElementById("type").value;
+  if (!id) return alert("Enter TMDB ID!");
 
-  const res = await fetch(`https://api.themoviedb.org/3/${type}/${id}?api_key=${API_KEY}&append_to_response=credits,images`);
+  const url = `https://api.themoviedb.org/3/movie/${id}?api_key=${TMDB_API_KEY}&append_to_response=credits,images,videos`;
+  const res = await fetch(url);
   const data = await res.json();
 
-  document.getElementById("title-field").value = data.title || data.name || "";
+  document.getElementById("title-field").value = data.title || "";
   document.getElementById("tagline-field").value = data.tagline || "";
-  document.getElementById("poster-field").value = data.poster_path ? `https://image.tmdb.org/t/p/w500${data.poster_path}` : "";
-  document.getElementById("genres-field").value = data.genres?.map(g => g.name).join(", ") || "";
-  document.getElementById("release-field").value = data.release_date || data.first_air_date || "";
-  document.getElementById("runtime-field").value = data.runtime || data.episode_run_time?.[0] || "";
-  document.getElementById("director-field").value = data.credits.crew.filter(c => c.job === "Director").map(c => c.name).join(", ");
-  document.getElementById("writer-field").value = data.credits.crew.filter(c => c.job === "Writer" || c.job === "Screenplay").map(c => c.name).join(", ");
-  document.getElementById("cast-field").value = data.credits.cast.slice(0, 5).map(c => c.name).join(", ");
+  document.getElementById("poster-field").value = `https://image.tmdb.org/t/p/w500${data.poster_path}`;
+  document.getElementById("backdrop-field").value = `https://image.tmdb.org/t/p/original${data.backdrop_path}`;
+  document.getElementById("genres-field").value = data.genres.map(g => g.name).join(", ");
+  document.getElementById("release-field").value = data.release_date || "";
+  document.getElementById("runtime-field").value = data.runtime + " min" || "";
   document.getElementById("overview-field").value = data.overview || "";
-  document.getElementById("screenshots-field").value = data.images.backdrops.slice(0, 5).map(i => `https://image.tmdb.org/t/p/w500${i.file_path}`).join(", ");
-  document.getElementById("downloads-field").value = "1080p|#, 720p|#";
 
-  updatePreview();
+  const cast = data.credits?.cast?.slice(0,5).map(a=>a.name).join(", ");
+  document.getElementById("cast-field").value = cast || "";
+
+  const crew = data.credits?.crew || [];
+  const director = crew.find(c => c.job === "Director")?.name;
+  const writer = crew.filter(c => c.job === "Writer").map(w => w.name).join(", ");
+  document.getElementById("director-field").value = director || "";
+  document.getElementById("writer-field").value = writer || "";
+
+  const screenshots = data.images?.backdrops?.slice(0,5).map(i => `https://image.tmdb.org/t/p/w500${i.file_path}`);
+  document.getElementById("screenshots-field").value = screenshots.join(", ");
 }
 
-function updatePreview(){
+function generateHTML() {
   const title = document.getElementById("title-field").value;
   const tagline = document.getElementById("tagline-field").value;
   const poster = document.getElementById("poster-field").value;
+  const genres = document.getElementById("genres-field").value.split(",").map(g => g.trim());
   const release = document.getElementById("release-field").value;
   const runtime = document.getElementById("runtime-field").value;
   const director = document.getElementById("director-field").value;
   const writer = document.getElementById("writer-field").value;
   const cast = document.getElementById("cast-field").value;
   const overview = document.getElementById("overview-field").value;
-  const screenshotsArr = document.getElementById("screenshots-field").value.split(",").map(s => s.trim());
-  const downloadsArr = document.getElementById("downloads-field").value.split(",").map(d => d.trim());
+  const screenshots = document.getElementById("screenshots-field").value.split(",").map(s=>s.trim());
+  const dlLabel = document.getElementById("download-label-field").value;
+  const dlLink = document.getElementById("download-link-field").value;
 
-  let html = `
-  <div class="poster"><img src="${poster}" alt=""></div>
-  <h1 class="title">${title}</h1>
-  <p class="tagline">${tagline}</p>
-  <div class="info-grid">
-    <div><span class="label">Release Date:</span> <span class="value">${release}</span></div>
-    <div><span class="label">Runtime:</span> <span class="value">${runtime}</span></div>
-    <div><span class="label">Director:</span> <span class="value">${director}</span></div>
-    <div><span class="label">Writer:</span> <span class="value">${writer}</span></div>
-    <div><span class="label">Top Cast:</span> <span class="value">${cast}</span></div>
-  </div>
-  <div class="overview"><span class="label">Overview:</span><p>${overview}</p></div>
-  <div class="screenshots"><h3>Screenshots</h3><div class="gallery">
-    ${screenshotsArr.map(s => `<img src="${s}" alt="">`).join("")}
-  </div></div>
-  <div class="downloads">
-    ${downloadsArr.map(d => {
-      const [label,url] = d.split("|");
-      return `<a href="${url}" class="gdlink">${label}</a>`;
-    }).join("")}
+  const html = `
+  <link rel="stylesheet" href="https://tituhh.github.io/css/cdn/gen.css">
+  <div class="container">
+    <div class="poster"><img src="${poster}" alt="${title} Poster"></div>
+    <h1 class="title">${title}</h1>
+    <p class="tagline">${tagline}</p>
+
+    <div class="info-grid">
+      <div><span class="label">Release Date:</span> <span class="value">${release}</span></div>
+      <div><span class="label">Runtime:</span> <span class="value">${runtime}</span></div>
+      <div><span class="label">Director:</span> <span class="value">${director}</span></div>
+      <div><span class="label">Writer:</span> <span class="value">${writer}</span></div>
+      <div><span class="label">Top Cast:</span> <span class="value">${cast}</span></div>
+    </div>
+
+    <div class="overview"><span class="label">Overview:</span><p>${overview}</p></div>
+
+    <div class="screenshots"><h3>Screenshots</h3>
+      <div class="gallery">
+        ${screenshots.map(s => `<img src="${s}" alt="Screenshot">`).join("")}
+      </div>
+    </div>
+
+    <a href="${dlLink}" class="download-btn">${dlLabel}</a>
   </div>`;
 
-  document.getElementById("preview-container").innerHTML = html;
+  document.getElementById("output").innerText = html;
+  return html;
 }
 
-function generateHTML(){
-  const content = document.getElementById("preview-container").innerHTML;
-  const finalHTML = `<link rel="stylesheet" href="https://tituhh.github.io/css/cdn/gen.css">\n<div class="container">\n${content}\n</div>`;
-  document.getElementById("output").value = finalHTML;
-}
-
-function copyHTML(){
-  const output = document.getElementById("output");
-  output.select();
-  document.execCommand("copy");
-  alert("✅ HTML Copied!");
-}
-
-async function sendPost(){
-  const htmlContent = document.getElementById("output").value;
+async function sendToBlogger() {
+  const htmlContent = generateHTML();
   const title = document.getElementById("title-field").value;
-  const genres = document.getElementById("genres-field").value;
-  const subject = `${title} [${genres}]`; // Blogger auto-uses these as Labels
+  const genres = document.getElementById("genres-field").value.split(",").map(g=>g.trim());
 
-  const res = await fetch("https://tmdb-5hjd.vercel.app/api/sendPost", {
+  const res = await fetch("/api/sendPost", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
       to: "asatkarsarvesh39.titu@blogger.com",
-      subject,
+      title,
+      genres,
       htmlContent
     })
   });
 
-  const result = await res.json();
-  if(res.ok) alert("✅ Post sent to Blogger successfully!");
-  else alert("❌ Failed: " + result.error);
+  const data = await res.json();
+  alert(data.success ? "✅ Sent to Blogger!" : "❌ Error: " + data.error);
 }
 </script>
+
 </body>
 </html>
